tests/rosetta/out/Smalltalk/assertions.out
/workspace/mochi/tests/rosetta/out/Smalltalk/assertions.st:4: parse error, expected '|' or identifier
