tests/rosetta/out/Smalltalk/assertions.st
" Generated by Mochi compiler v0.10.26 on 2025-07-16T09:48:36Z
"
| main x |
main := [ | x := 43.
((x ~= 42)) ifTrue: [
  Transcript show: 'Assertion failed'; cr.
] ifFalse: [
  Transcript show: 'Assertion passed'; cr.
]. ].
main value.
